# project-a

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
config/: config.yaml
docs/: poetry.md  pre-commit-hooks
mlops-project/src/: data_prep.py  inference.py  train.py
