[tool.poetry]
name = "mlops-starter-guide"
version = "0.1.0"
description = "This project will be for people to get started with mlops"
authors = ["Jagadish Kakhandaki <jagadishkakhandaki@gmail.com>"]

license = "MIT"

readme = ["README.md"]

exclude = ["tests/*"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
catboost = "^1.2.5"
click = ">=8"
fastapi = ">=0.110.0"
loguru = ">=0.6,<1.0"
pandas = ">=2.1.1"
plotly = "^5.17.0"
polars = ">=0.20.16"
pyarrow = "^15.0.2"
python-dotenv = ">=0.20.0"
scikit-learn = "^1.3.2"
uvicorn = { extras = ["standard"], version = ">=0.29.0" }

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "24.4.2" }
coverage = ">=6.4.3"
docformatter = "1.7.5"
GitPython = ">=3.1.27"
jupyterlab = ">=3.2.5"
jupytext = ">=1.13.7"
jupyter_contrib_nbextensions = ">=0.5.1"
myst-parser = ">=0.18.1"
nbsphinx = "^0.9.2"
pre-commit = ">=2.20.0"
pydata-sphinx-theme = ">=0.14.0"
pytest = ">=7.2.0"
pytest-cov = ">=3.0.0"
pytest-mock = ">=1.7.1,<4.0"
pytest-runner = ">=6.0.0"
python-dotenv = ">=0.20.0"
ruff = "0.4.4"
sphinx = ">=5.3.0"
sphinx-autodoc-typehints = ">=1.21.1"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

